--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Portfolio</title>
+    <meta property="og:image" content="https://axel7083.github.io/Portfolio/preview.PNG" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
